User 검색, 댓글 API 추가